# HotDog

./: README.md  一步一步制作四足机器人.docx
1.3D model/HotDog/: 111.SLDPRT  17-23-4轴承.SLDPRT  2020铝-70.SLDPRT  30-37-4轴承6.SLDPRT  35-44-5轴承.SLDPRT  Body.SLDASM  Cycloid_Reducer.SLDASM  LB_JIAN_LINK.SLDASM  LB_SHANK_LINK.SLDASM  LB_THIGH_LINK.SLDASM  LF_JIAN_LINK.SLDASM  LF_SHANK_LINK.SLDASM  LF_THIGH_LINK.SLDASM  NFS5-2020-360.0.SLDPRT  RB_JIAN_LINK.SLDASM  RB_SHANK_LINK.SLDASM  RB_THIGH_LINK.SLDASM  RF_JIAN_LINK.SLDASM  RF_SHANK_LINK.SLDASM  RF_THIGH_LINK.SLDASM  Virtual_part.SLDPRT  传动轴.SLDPRT  保持架.SLDPRT  光杆同步轮.SLDPRT  光杆同步轮10.SLDPRT  关节5_0版本.SLDASM  减速器上盖.SLDPRT  减速器壳体.SLDPRT  同步带.SLDPRT  同步带168.SLDPRT  同步轮.SLDPRT  后端板.SLDPRT  四足机器人HotDog.SLDASM  固定桁架.SLDPRT  大足.SLDPRT  大足2.SLDPRT  字母钉.SLDPRT  定位环.SLDPRT  定位环_17_20_1-2mm.SLDPRT  小足.SLDPRT  (+11 more)
2.Hardware files(EasyEDA)/BaizeFoc1/: BaizeFoc1_sch.json  BaizeFoc_pcb.json
3.Software/Arduino source code/baizeOne_arduino/: baizeOne_arduino.ino
3.Software/ROS package/HotDog/: CMakeLists.txt  package.xml
3.Software/ROS package/HotDog/config/: joint_names_HotDog.yaml
3.Software/ROS package/HotDog/launch/: display.launch  gazebo.launch
3.Software/ROS package/HotDog/meshes/: LB_JIAN_LINK.STL  LB_P_LINK.STL  LB_R_LINK.STL  LB_SHANK_LINK.STL  LB_THIGH_LINK.STL  LB_Y_LINK.STL  LF_JIAN_LINK.STL  LF_R_LINK.STL  LF_SHANK_LINK.STL  LF_THIGH_LINK.STL  LF_Y_LINK.STL  RB_JIAN_LINK.STL  RB_P_LINK.STL  RB_R_LINK.STL  RB_SHANK_LINK.STL  RB_THIGH_LINK.STL  RB_Y_LINK.STL  RF_JIAN_LINK.STL  RF_P_LINK.STL  RF_R_LINK.STL  RF_SHANK_LINK.STL  RF_THIGH_LINK.STL
3.Software/ROS package/HotDog/src/: baizeOne_flucturate.cpp
3.Software/ROS package/HotDog/urdf/: HotDog.csv  HotDog.gv  HotDog.urdf
3.Software/ROS package/robot_msg/: CMakeLists.txt
(+25 files in other folders)
